--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
+    "@ionic/angular": "^7.7.1",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
     "ionicons": "^7.0.0",
+    "swiper": "^11.0.6",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
   },
