--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ionic/angular": "^7.7.1",
     "@ionic/vue": "^7.7.1",
     "@ionic/vue-router": "^7.7.1",
+    "axios": "^1.6.7",
     "heic2any": "^0.0.4",
     "imagekitio-vue": "^3.0.0",
     "ionicons": "^7.0.0",
