--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ionicons": "^7.0.0",
     "swiper": "^11.0.6",
     "vue": "^3.3.0",
+    "vue-image-kit": "^0.2.2",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
