--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "imagekitio-vue": "^3.0.0",
     "ionicons": "^7.0.0",
     "swiper": "^11.0.6",
+    "tiny-emitter": "^2.1.0",
     "vue": "^3.3.0",
     "vue-image-kit": "^0.2.2",
     "vue-router": "^4.2.5"
