--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@ionic/angular": "^7.7.1",
     "@ionic/vue": "^7.7.1",
     "@ionic/vue-router": "^7.7.1",
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^1.6.7",
     "heic2any": "^0.0.4",
     "imagekitio-vue": "^3.0.0",
     "ionicons": "^7.0.0",
+    "jwt-decode": "^4.0.0",
     "swiper": "^11.0.6",
     "tiny-emitter": "^2.1.0",
     "vue": "^3.3.0",
