--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "@capacitor/app": "5.0.7",
-    "@capacitor/core": "5.7.0",
+    "@capacitor/core": "^5.7.0",
     "@capacitor/haptics": "5.0.7",
+    "@capacitor/ios": "5.7.0",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.7.1",
@@ -33,7 +34,7 @@
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@capacitor/cli": "5.7.0",
+    "@capacitor/cli": "^5.7.0",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
