--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@capacitor/android": "^5.7.0",
     "@capacitor/app": "5.0.7",
     "@capacitor/core": "^5.7.0",
     "@capacitor/haptics": "5.0.7",
-    "@capacitor/ios": "5.7.0",
+    "@capacitor/ios": "^5.7.0",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
     "@ionic/angular": "^7.7.1",
